# quant

./: .gitignore  data_cleaning.py  data_filtering.py  optimize_trust.py  portfolio_construction.py  pyproject.toml
etc/: backtest_prediction.ipynb  cupy_test.ipynb  cupy_test.py  data_filtering_vis.ipynb  jax_practice.ipynb  jax_test.ipynb  log_check.ipynb  newton_method.ipynb  return_volatility_vis.ipynb  summary.ipynb  trust_cluster.ipynb
lib/: __init__.py  _portfolio.py  _ticker.py  downloads.py
lib/context/: _Context.py  _RiskContext.py  _SharpeContext.py  __init__.py
lib/optimize/: BarrierOptimizer.py  Optimizer.py  __init__.py
lib/utils/: calcutils.py
